--- a/index.html
+++ b/index.html
@@ -45,6 +45,70 @@
             </div>
           </nav>
     </div>
+    <!----------------------- Banner Part Start------------------- -->
+    <div class="container">
+
+        <div id="carouselExampleControls" class="carousel slide orange-bg" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active ">
+                <div class="row align-items-center">
+                    <div class="col-md-7">
+                        <h1>Mi LED TV 4A 32</h1>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est commodi tenetur reprehenderit quo aperiam, at autem enim dolores laborum, nobis illum exercitationem mollitia? Aut, minima! Lorem ipsum dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing. Lorem ipsum dolor sit amet. Lorem, ipsum dolor. </P>
+                        <h1 class="price">$1289</h1>
+                        <button class="btn-buy-now">BUY NOW</button>
+
+                    </div>
+                    <div class="col-md-5">
+                        <img src="images/banner-images/tv.png" class="d-block w-100" alt="">
+
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item active ">
+                <div class="row align-items-center">
+                    <div class="col-md-7">
+                        <h1>Mi LED TV 4A 32</h1>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est commodi tenetur reprehenderit quo aperiam, at autem enim dolores laborum, nobis illum exercitationem mollitia? Aut, minima! Lorem ipsum dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing. Lorem ipsum dolor sit amet. Lorem, ipsum dolor. </P>
+                        <h1 class="price">$1289</h1>
+                        <button class="btn-buy-now">BUY NOW</button>
+
+                    </div>
+                    <div class="col-md-5">
+                        <img src="images/banner-images/tv.png" class="d-block w-100" alt="">
+
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item active ">
+                <div class="row align-items-center">
+                    <div class="col-md-7">
+                        <h1>Mi LED TV 4A 32</h1>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est commodi tenetur reprehenderit quo aperiam, at autem enim dolores laborum, nobis illum exercitationem mollitia? Aut, minima! Lorem ipsum dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing. Lorem ipsum dolor sit amet. Lorem, ipsum dolor. </P>
+                        <h1 class="price">$1289</h1>
+                        <button class="btn-buy-now">BUY NOW</button>
+
+                    </div>
+                    <div class="col-md-5">
+                        <img src="images/banner-images/tv.png" class="d-block w-100" alt="">
+
+                    </div>
+                </div>
+              </div>
+             
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+    </div>
+    <!----------------------- Banner Part End  -------------------- -->
    
 </body>
 </html>
