--- a/index.html
+++ b/index.html
@@ -143,5 +143,42 @@
        
      </div>
      <!------------------ Categories Section End-- ------------------->
+     <!------------------ Card Section Start ------------------ -->
+        <div class="container ">
+          <div class="margin2 d-flex justify-content-between ">
+            <h3>Shoes</h3>
+            <p>See all</p>
+          </div>
+          <div class="d-flex justify-content-between">
+            <div class="card shadow p-3 mb-5 bg-body rounded " style="width: 22rem;">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body ">
+                <h5 class="card-title ">Reebok Dirt Men's Shoes</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the </p>
+                <h5  class="doller">$1289</h5>
+                <a href="#" class="btn btn-dark">BUY NOW </a>
+              </div>
+            </div>
+            <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 22rem;">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body ">
+                <h5 class="card-title ">Reebok Pump</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the </p>
+                <h5  class="doller">$799</h5>
+                <a href="#" class="btn btn-dark">BUY NOW</a>
+              </div>
+            </div>
+            <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 22rem;">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body ">
+                <h5 class="card-title ">Reebok All Teraain</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the </p>
+                <h5  class="doller">$899</h5>
+                <a href="#" class="btn btn-dark btn ">BUY NOW</a>
+              </div>
+            </div>
+          </div>
+        </div>
+     <!----------------- Card Section End ------------------ -->
 </body>
 </html>
