--- a/index.html
+++ b/index.html
@@ -180,5 +180,42 @@
           </div>
         </div>
      <!----------------- Card Section End ------------------ -->
+     <!----------------- Backpack Section Start ----------------- -->
+     <div class="container ">
+      <div class="margin2 d-flex justify-content-between ">
+        <h3>Backpack</h3>
+        <p>See all</p>
+      </div>
+      <div class="d-flex justify-content-between">
+        <div class="card shadow p-3 mb-5 bg-body rounded " style="width: 22rem;">
+          <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+          <div class="card-body ">
+            <h5 class="card-title ">Ison Backpack</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the </p>
+            <h5  class="doller">$1289</h5>
+            <a href="#" class="btn btn-dark">BUY NOW </a>
+          </div>
+        </div>
+        <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 22rem;">
+          <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+          <div class="card-body ">
+            <h5 class="card-title ">Biaowang Backpack</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the </p>
+            <h5  class="doller">$799</h5>
+            <a href="#" class="btn btn-dark">BUY NOW</a>
+          </div>
+        </div>
+        <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 22rem;">
+          <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+          <div class="card-body ">
+            <h5 class="card-title ">Dxyizu WS54 Smart</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the </p>
+            <h5  class="doller">$899</h5>
+            <a href="#" class="btn btn-dark btn ">BUY NOW</a>
+          </div>
+        </div>
+      </div>
+    </div>
+     <!----------------- Backpack Section End ----------------- -->
 </body>
 </html>
