--- a/index.html
+++ b/index.html
@@ -217,5 +217,17 @@
       </div>
     </div>
      <!----------------- Backpack Section End ----------------- -->
+     <!------------------- How to Contact Us ------------------ -->
+     <div class="container contact d-flex align-items-center justify-content-center  orange-bg">
+      <div>
+        <h3>LET'S STAY IN TOUCH</h3>
+        <P>Get updates on sales specials and more</P>
+        <div class="input-group mb-3 ">
+          <input type="text" class="form-control" placeholder="Enter Your Email............" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <span class="input-group-text btn-buy-now" id="basic-addon2">Send</span>
+        </div>
+       </div>
+      </div>
+     <!------------------- How to Contact Us------------------ -->
 </body>
 </html>
